# mazegroup.py

./: BRAND.md  LICENSE  README.md  cmd_test  cmd_test.bat  commit  commit.bat  gui_test.py  pycache_rm  pycache_rm.bat  setup.py  test.py  vcmd_test  vmazegroup  vupdate
.github/workflows/: python-package.yml
mazegroup/: README.md  __init__.py  commands.py  imports.py  pyproject.toml  utils.py
mazegroup/cd/: __init__.py
mazegroup/clear/: __init__.py
mazegroup/cli/: __init__.py  main.py
mazegroup/echo/: __init__.py
mazegroup/help/: __init__.py
mazegroup/libs/: termgui.py
mazegroup/libs/jygo/: __init__.py  jygo.py
mazegroup/libs/jygo/lib/: consts.py  package.py
mazegroup/libs/jygo/lib/base/: errors.py  inits.py  jumps.py  logs.py
mazegroup/libs/jygo/package/log/: __init__.py  pkg.py
mazegroup/libs/nl/: analysis.py  kw.py  language.py  syllables.py  verbs.py  vowels.py  word.py
mazegroup/ls/: __init__.py
mazegroup/mazegroup/: __init__.py
mazegroup/pyeval/: __init__.py
mazegroup/pyexec/: __init__.py
mazegroup/pypkg/: __init__.py
mazegroup/quit/: __init__.py
mazegroup/saves/: commands.pkl
mazegroup/sc/: __init__.py
mazegroup/src/: __init__.py
mazegroup/update/: __init__.py
mazegroup/vwft/: __init__.py
src/: __init__.py
