[tool.poetry]
name = "mazegroup"
version = "0.0.1"
description = "MazeGroup.py is an general prupose library for Python."
authors = ["Genius_um & Rayanis55"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/Geniusum/mazegroup.py"
Issues = "https://github.com/Geniusum/mazegroup.py/issues"